--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Airport Visualization</title>
     <link rel="stylesheet" href="./styles.css">
     <script src="https://d3js.org/d3.v7.min.js" defer></script>
     <script src='./app.js' defer></script>
